# catalog-mcp-server

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs
.cargo/: config.toml
.ci/: install-cargo-make.sh  install-cargo-udeps.sh
.dev/: config.json  docker-compose.yml
.dev/catalog-engine/: config.json
.dev/mongo/initdb/: 10-init-databases.js  20-seed.js
.dev/mongo/initdb/data/org_1/: crds.mock.json  objects.mock.json
.dev/mongo/initdb/data/system/: crds.mock.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: _build.yml  _checks.yml  _release-docker.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  main.yml  release.yml
configuration/: Cargo.toml  Makefile.toml
configuration/src/: lib.rs  server.rs
schemas/: config.schema.json
src/: cli.rs  configuration.rs  logger.rs  main.rs  server.rs  signal.rs  spec.rs  tracing.rs
src/server/: _mod.rs  config.rs
static/: catalog-engine.openapi.json
